--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
 
 	<title>Svelte app</title>
 
-
-	<link rel='stylesheet' href='bundle.css'>
 </head>
     <form>
         Имя
@@ -34,6 +32,6 @@
         data-cost='1999'
         data-title='Очень крутой портмоне'
     >Добавить к заказу портмоне</button>
-	<script src='bundle.js'></script>
+	<script src='sellet_widget.js'></script>
 </body>
 </html>
