refill form implemented

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,10 @@
 
     <button
         class="sellet-buy-button"
-        data-selltype='upsell'
-        data-cost='1999'
-        data-title='Очень крутой портмоне'
+        data-selltype="upsell"
+        data-offer="MY test offer"
+        data-cost="114646"
+        data-title="Привет, я некий тайтл"
     >Добавить к заказу портмоне</button>
 	<script src='sellet_widget.js'></script>
 </body>
